...
            SliverAppBar(
              floating: true,
              snap: true,
              backgroundColor: colorPrimary,
              elevation: 0,
              leading: FlowIconButton(
                key: const ValueKey('subjectGoBackButton'),
                icon: FlowIconData.chevronLeft,
                onTap: Navigator.of(context).pop,
              ),
            ),
            SliverList(
              delegate: SliverChildListDelegate(
                [
                  const ListSubjectsCard(
                    key: ValueKey('listSubjectsHeader'),
                    title: "disciplinas",
                    description: "Acesse uma Disciplina e veja suas Avaliações",
                    textAlign: TextAlign.start,
                  ),
                  Padding(
                    padding: const EdgeInsets.symmetric(
...
