...
          color: colorSecondary,
          size: spacingSM,
        ),
        const VSpacer.quarck(),
        Expanded(
          child: TextFormField(
            key: const ValueKey('searchTextFieldInput'),
            decoration: InputDecoration(
              focusedBorder: OutlineInputBorder(
                borderSide:
                    const BorderSide(color: colorSecondary, width: spacingAtom),
                borderRadius:
                    BorderRadius.circular(objectStyleBorderRadiusPill),
...
